[gd_scene load_steps=2 format=3 uid="uid://cjrkm3t758l2"]

[ext_resource type="Script" path="res://addons/quest_manager/Editor/Nodes/Timer_Step.gd" id="1_7ncg0"]

[node name="Timer_Step" type="GraphNode"]
custom_minimum_size = Vector2(150, 150)
offset_right = 150.009
offset_bottom = 150.012
size_flags_vertical = 4
tooltip_text = "Action Quest Step requires an action to be completed to advance"
title = "Timer Step"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0, 1, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 2
slot/1/left_color = Color(0, 0, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_7ncg0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="details" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Step details"
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="h" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="minutes" type="SpinBox" parent="VBoxContainer/h"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Minutes"
max_value = 999.0

[node name="seconds" type="SpinBox" parent="VBoxContainer/h"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Seconds"
max_value = 999.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="count_dir" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Timer: Counts Down to 0
Stop Watch: Counts up to time set"
button_pressed = true
text = "Timer"

[node name="fail_on_timeout" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "If the quest fails on Timeout.
Completes this step if false"
button_pressed = true
text = "Fail On Timeout"

[node name="meta_data" type="Label" parent="."]
layout_mode = 2
text = "Meta Data"

[connection signal="gui_input" from="VBoxContainer/details" to="." method="_on_details_gui_input"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/count_dir" to="." method="_on_count_down_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/fail_on_timeout" to="." method="_on_fail_on_timeout_toggled"]
